public/assets/css/seniorCounsel/addnewcase.css
/* Global Styles */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
/* font*/

body {
    font-family: 'Montserrat', sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f8ff;
}

/* Main Section */
.new-case-section {
    text-align: center;
} 

.new-case-section h1 {
    color: #ffffff;
    background-color: rgb(29, 27, 49);
    font-size: 20px;
    margin-bottom: 10px;
    padding: 10px;
    text-transform: uppercase;
}

.case-forms {
    margin: 20px auto;
    padding: 0 20px;
    display: flex;
    justify-content: space-between;
    gap: 20px;
}

.form-container {
    background-color: #E4E9F7;
    padding: 40px;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    flex: 1;
}

.form-container h2 {
    color: #1d1b31;
    font-size: 18px;
    margin-bottom: 15px;
    text-transform: uppercase;
}

.form-group {
    margin-bottom: 15px;
    text-align: left;
    font-size: 15px;
}

.form-group label {
    display: block;
    margin-bottom: 5px;
    font-weight: bold;
    color: #1d1b31;
}

.form-group input {
    width: 100%;
    padding: 10px;
    border-radius: 10px;
    background-color: #fff;
    border: 1px solid #ddd;
    font-size: 15px;
    transition: border-color 0.3s;
}
.form-group ::placeholder{
    color: #999999;
}

.form-group input:focus {
    border-color: #fa9800;
    outline: none;
}

.large-container{
    background-color: #E4E9F7;
    padding: 20px 40px 20px 40px;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    flex: 1;
    margin: 20px;
    margin-bottom: 0;
    text-align: left;
}
.large-container h2{
    color: #1d1b31;
    font-size: 18px;
    margin-bottom: 15px;
    text-transform: uppercase;
}
.form-row {
    display: flex;
    justify-content: space-between;
    height: 70px;
    gap:20px;
    margin-bottom: 10px;
}

.form-row .form-group {
    flex: 1;
}

.form-row input{
    width:fit-content
}

.add-case-button {
    margin-top: 20px;
    padding: 10px 20px;
    background-color: #ff9800;
    color: #fff;
    border: none;
    border-radius: 10px;
    font-weight: bold;
    font-size: 14px;
    cursor: pointer;
    transition: background-color 0.3s;
    margin-bottom: 10px;
}

.add-case-button:hover {
    background-color: #b67d2f;
}

/* Responsive Styles */

@media (max-width: 1030px) {
    .form-container h2 {
        font-size: 16px;
    }
    .new-case-section h1 {
        font-size: 16px;
    }
    .form-container form input {
        font-size: 13px;
    }
}

@media (max-width: 951px) {
    .form-container h2 {
        font-size: 13.5px;
    }
    .new-case-section h1 {
        font-size: 14px;
    }
    .form-container form input {
        font-size: 12px;
    }
    .form-container {
        padding: 25px;
    }
    .form-container form input {
        padding: 8px;
    }
}

@media (max-width: 768px) {
    .case-forms {
        flex-direction: column;
        gap: 5px;
        margin: 30px 30px 0px 30px;
        padding: 10px;
    }

    .form-container {
        margin-bottom: 20px;
    }

    .big-navbar {
        flex-direction: column;
        margin-left: 0;
    }

    .navbar-icons {
        margin-top: 10px;
    }
    .add-case-button {
        margin-top: 20px;
    }
}


hr{
   border-color: #fa9800;
   background-color: #fa9800;
   color: #fa9800;
  }

.error-message {
    color: #ff0000;
    font-size: 0.9em;
    margin-top: 5px;
}

input.valid {
    border: 2px solid green;
}

